feat: implement GET /user/v1/profile
