# src/routes/user.ts
@@ -1,10 +1,15 @@
 import express from 'express';
 import asyncHandler from 'express-async-handler';
 
-import { v1PostRegister } from '../controller';
+import { isAuthenticated, v1GetProfile, v1PostRegister } from '../controller';
 
 const router = express.Router();
 
 router.post('/user/v1/register', asyncHandler(v1PostRegister));
+router.get(
+  '/user/v1/profile',
+  asyncHandler(isAuthenticated),
+  asyncHandler(v1GetProfile),
+);
 
 export default router;
