# swagger.yaml
@@ -93,6 +93,25 @@ components:
                     type: string
                   refreshToken:
                     type: string
+    200-get-user-profile:
+      description: OK
+      content:
+        application/json:
+          schema:
+            properties:
+              data:
+                type: object
+                properties:
+                  user:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      name:
+                        type: string
+                      email:
+                        type: string
+
     200-get-system-v1-config:
       description: OK
       content:
@@ -266,10 +285,18 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/200-post-user-register'
-        # 401:
-        #   $ref: '#/components/responses/401-swagger-api-docs'
-        # 500:
-        #   $ref: '#/components/responses/500-swagger-api-docs'
+
+  /user/v1/profile:
+    get:
+      tags:
+        - user
+      operationId: /user/v1/profile
+      description: 取得使用者資訓
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          $ref: '#/components/responses/200-get-user-profile'
 
   /swagger/api-docs:
     get:
